--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <br />
     <a href="mailto:jayden@jayden.dev">email: jayden@jayden.dev</a>
 
-    <div class="footer" id="switcher"><a href="javascript:toggleTheme()">:)</a></div>
+    <div class="footer" id="switcher"><a href="javascript:toggleTheme()">click me :)</a></div>
   </div>
 </body>
 
