--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <title>j</title>
+  <link rel="shortcut icon" href="./img/j.png" type="image/png">
 
   <meta property="og:site_name" content="jayden.dev">
   <meta property="og:url" content="jayden.dev">
