feat: added changing footer with theme (kinda)
has a bug where for the first page load it says one of the footers twice in a row

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <br />
     <a href="mailto:jayden@jayden.dev">email: jayden@jayden.dev</a>
 
-    <div class="footer" id="switcher"><a href="javascript:toggleTheme()">click me :)</a></div>
+    <div class="footer" id="switcher"></a></div>
   </div>
 </body>
 
