fix: add charset in html

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html class="theme-dark">
 
 <head>
+  <meta charset="UTF-8">
+  
   <title>j</title>
   <link rel="shortcut icon" href="./img/j.png" type="image/png">
 
