--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <br />
     <a href="mailto:jayden@jayden.dev">email: jayden@jayden.dev</a>
 
-    <div class="footer" id="switcher"></a></div>
+    <div class="footer" id="switcher"></div>
   </div>
 </body>
 
