feat(links): add tor link to website
god the formatting is so bad, prettier pls stop being bad :(

--- a/index.html
+++ b/index.html
@@ -1,39 +1,49 @@
 <!DOCTYPE html>
 <html class="theme-dark">
+  <head>
+    <meta charset="UTF-8" />
 
-<head>
-  <meta charset="UTF-8">
-  
-  <title>j</title>
-  <link rel="shortcut icon" href="./img/j.png" type="image/png">
+    <title>j</title>
+    <link rel="shortcut icon" href="./img/j.png" type="image/png" />
 
-  <meta property="og:site_name" content="jayden.dev">
-  <meta property="og:url" content="jayden.dev">
-  <meta property="og:title" content="j">
-  <meta name="theme-color" content="#69da6b">
-  <meta property="og:description" content="please kill me :)">
-  <meta property="og:type" content="website">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta property="og:site_name" content="jayden.dev" />
+    <meta property="og:url" content="jayden.dev" />
+    <meta property="og:title" content="j" />
+    <meta name="theme-color" content="#69da6b" />
+    <meta property="og:description" content="please kill me :)" />
+    <meta property="og:type" content="website" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <link rel="stylesheet" href="./css/style.css" type="text/css" />
-  <script src="./js/script.js"></script>
+    <link rel="stylesheet" href="./css/style.css" type="text/css" />
+    <script src="./js/script.js"></script>
+  </head>
 
-</head>
+  <body>
+    <div class="site">
+      good web design, i know.
+      <br /><br />
+      <a href="https://discord.com/users/503105733701926922"
+        >discord: Jayden#8080</a
+      >
+      <br />
+      <a href="https://github.com/jayden000">github: jayden000</a>
+      <br />
+      <a href="https://keybase.io/jayden000">keybase: jayden000</a>
+      <br />
+      <a href="mailto:jayden@jayden.dev">email: jayden@jayden.dev</a>
+      <br />
+      <br />
+      <br />
+      <a
+        >available at <a href="https://jayden.dev">jayden.dev</a> and
+        <a
+          href="http://vioy5nnuregspjelwtwzi3sfzvvkx7g6zrjephgmdzladxcaqyrxysqd.onion/"
+        >
+          on tor :)</a
+        ></a
+      >
 
-<body>
-  <div class="site">
-    good web design, i know.
-    <br /><br />
-    <a href="https://discord.com/users/503105733701926922">discord: Jayden#8080</a>
-    <br />
-    <a href="https://github.com/jayden000">github: jayden000</a>
-    <br />
-    <a href="https://keybase.io/jayden000">keybase: jayden000</a>
-    <br />
-    <a href="mailto:jayden@jayden.dev">email: jayden@jayden.dev</a>
-
-    <div class="footer" id="switcher"></div>
-  </div>
-</body>
-
+      <div class="footer" id="switcher"></div>
+    </div>
+  </body>
 </html>
