style(links): change the way the tor link is shown

--- a/index.html
+++ b/index.html
@@ -36,10 +36,9 @@
       <br />
       <a
         >available at <a href="https://jayden.dev">jayden.dev</a> and
-        <a
-          href="http://vioy5nnuregspjelwtwzi3sfzvvkx7g6zrjephgmdzladxcaqyrxysqd.onion/"
-        >
-          on tor :)</a
+        <a>
+          on tor<br />http://vioy5nnuregspjelwtwzi3sfzvvkx7g6zrjephgmdzladxcaqyrxysqd.onion/
+          :)</a
         ></a
       >
 
