--- a/index.html
+++ b/index.html
@@ -37,9 +37,8 @@
       <a
         >available at <a href="https://jayden.dev">jayden.dev</a> and
         <a>
-          on tor<br />http://vioy5nnuregspjelwtwzi3sfzvvkx7g6zrjephgmdzladxcaqyrxysqd.onion/
-          :)</a
-        ></a
+          on tor :)<br />http://vioy5nnuregspjelwtwzi3sfzvvkx7g6zrjephgmdzladxcaqyrxysqd.onion/
+        </a></a
       >
 
       <div class="footer" id="switcher"></div>
