feat(links): add pgp key link

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
       <br />
       <a href="mailto:jayden@jayden.dev">email: jayden@jayden.dev</a>
       <br />
+      <a href="https://jayden.dev/pgp.txt">pgp key</a>
+      <br />
       <br />
       <br />
       <a
