--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
       <br />
       <a href="mailto:jayden@jayden.dev">email: jayden@jayden.dev</a>
       <br />
+      <a href="https://matrix.to/#/@jayden:winsposure.com"
+        >matrix: @jayden:winsposure.com</a
+      >
+      <br />
+      <br />
       <a href="https://jayden.dev/pgp.txt">pgp key</a>
       <br />
       <br />
