--- a/index.html
+++ b/index.html
@@ -20,31 +20,29 @@
 
   <body>
     <div class="site">
-      good web design, i know.
+      Hi I'm Nate(Natesplanet) I am a Gamer and Photographer 📷🎮
       <br /><br />
-      <a href="https://discord.com/users/503105733701926922"
-        >discord: Jayden#8080</a
+      <a href="https://discord.com/users/734918355303006299"
+        >Discord: Natesplanet#3285</a
       >
       <br />
-      <a href="https://github.com/jayden000">github: jayden000</a>
+      <a href="https://github.com/Natesplanet">Github: Natesplanet</a>
       <br />
-      <a href="https://keybase.io/jayden000">keybase: jayden000</a>
+      <a href="https://twitter.com/natesplanet">Twitter: @Natesplanet</a>
       <br />
-      <a href="mailto:jayden@jayden.dev">email: jayden@jayden.dev</a>
+      <a href="mailto:nathankamineni@gmail.com">Email: nathankamineni@gmail.com</a>
       <br />
-      <a href="https://matrix.to/#/@jayden:winsposure.com"
-        >matrix: @jayden:winsposure.com</a
+      <a href="https://www.instagram.com/Natesplanet/"
+        >Instagram: @Natesplanet</a
       >
       <br />
       <br />
-      <a href="https://jayden.dev/pgp.txt">pgp key</a>
-      <br />
+     <br />
       <br />
       <br />
       <a
-        >available at <a href="https://jayden.dev">jayden.dev</a> and
+        >If you want others to know about me here is the link!<a href="http://nate.dev/">nate.dev</a>
         <a>
-          on tor :)<br />http://vioy5nnuregspjelwtwzi3sfzvvkx7g6zrjephgmdzladxcaqyrxysqd.onion/
         </a></a
       >
       <div class="footer" id="switcher"></div>
