fix(html-head): fix og:image tag

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="./img/j.png" type="image/png" />
 
     <meta property="og:site_name" content="jayden.dev" />
-    <meta property="og:image" content="./img/j.png" />
+    <meta property="og:image" content="https://jayden.dev/img/j.png" />
     <meta property="og:url" content="jayden.dev" />
     <meta property="og:title" content="j" />
     <meta name="theme-color" content="#69da6b" />
