fix(js): Subresource Integrity
funny security headers

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <link rel="stylesheet" href="./css/style.css" type="text/css" />
-    <script src="./js/script.js"></script>
+    <script
+      src="./js/script.js"
+      integrity="sha384-1609212ed4fbe8e8fb5b94f7904a496a00a3f62ffec111c9f82f35a1e989790feef0b240fe3a82906c3eefa2986dbf11783c0a1b52f0c927c6449eb14940c657"
+    ></script>
   </head>
 
   <body>
