fix(sri): fix v3 pls
pls work

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <link rel="stylesheet" href="./css/style.css" type="text/css" />
     <script
       src="./js/script.js"
-      integrity="sha512-1609212ed4fbe8e8fb5b94f7904a496a00a3f62ffec111c9f82f35a1e989790feef0b240fe3a82906c3eefa2986dbf11783c0a1b52f0c927c6449eb14940c657"
+      integrity="sha512-FgkhLtT76Oj7W5T3kEpJagCj9i/+wRHJ+C81oemJeQ/u8LJA/jqCkGw+76KYbb8ReDwKG1LwySfGRJ6xSUDGVw=="
+      crossorigin="anonymous"
     ></script>
   </head>
 
