--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <body>
     <div class="site">
-      good web design, i know.
+      <a id="title">good web design, i know.</a>
       <br /><br />
       <a href="https://discord.com/users/503105733701926922"
         >discord: Jayden#8080</a
